--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,11 @@
       <artifactId>sqljet</artifactId>
       <version>1.1.6</version>
     </dependency>
-    <!-- 
     <dependency>
-      <groupId>org.owasp.esapi</groupId>
-      <artifactId>esapi</artifactId>
-      <version>2.0.1</version>
+      <groupId>com.coverity.security</groupId>
+      <artifactId>coverity-escapers</artifactId>
+      <version>1.1.1</version>
     </dependency>
-    -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
