--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
       <version>4.5.6</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.14.1</version>
+    </dependency>
   </dependencies>
 
   <build>
